feat: Update complete profile
